Поудалял лишние импорты, закомменченный код и т.д.

--- a/src/main/resources/db/changelog/changeset/create-user-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-user-table.yaml
@@ -2,6 +2,11 @@ databaseChangeLog:
   - changeSet:
       id: create-user
       author: Sergey
+      preConditions:
+        - onFail: MARK_RAN
+        - not:
+            - tableExists:
+                tableName: users
       changes:
         - createTable:
             tableName: users
